# DAQ

./: .gitignore  DAQ_View.py  LPM.py  LPM_Class.py  LPM_Run.py  LPM_Run_Database.py  LPM_View.py  LPM_View_Database.py  Matt-main.py  Opt_View.py  POV.py  POV_Run.py  Run_Optim.py  View_DAQ.py  ZIF.py  foo.csv  impedance_view.py  requirements.txt  test_fft.py
hdy/: AAD_LaserClasses.py  Abbot_File.py  BaseClasses.py  DAQ_File.py  DAQ_GUI.py  Fino_File.py  LaserClasses.py  Laser_GUI.py  OptClasses.py  Opt_GUI.py  SDY_File.py  SyncopeClasses.py  VolcanoClasses.py  __init__.py  laser.py
mmt/: functions.py  transformations.py
mmt/ecg/: PTQRSD.py  __init__.py  data_reader.py  ecgdetectors.py  filters.py  kathirvel_ecg.py
mmt/filter/: __init__.py  ft_feature.py
mmt/find_peaks/: __init__.py  ampd.py  find_peaks_cwt_refined.py
mmt/fit/: ransac.py
mmt/hrv/: hrv.py
mmt/outlier/: mad_based_outlier.py
mmt/peaks/: refine.py
mmt/smooth/: __init__.py  smooth.py
mmt/threshold/: __init__.py  minimum_error.py
projects/daq/: DAQ_View.py  LPM_Run.py  LPM_View.py  hello.py  pyproject.toml  volcno.py
reference/micropace/: RE_ Hope HF 2 data.eml  R_A-AV Addendum to UIM V0.2.docx
