[project]
name = "daq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hdy",
    "mmt",
    "statsmodels>=0.14.4",
]

[tool.uv.sources]
hdy = { path = "../../packages/hdy", editable = true }
mmt = { path = "../../packages/mmt", editable = true }
